--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for You ♡</p>
+      <p>Letter for Kelly</p>
     </div>
 
     <!-- Letter Screen -->
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Valentine Date:</strong> Have fun in Spain with you family! :3
         </p>
       </div>
     </div>
