full project base

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>Letter for Kelly</p>
+      <p>A letter for my Love, Kelly</p>
     </div>
 
     <!-- Letter Screen -->
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Have fun in Spain with you family! :3
+          <strong>Valentine Date:</strong> This is the first Valetine we couldnt spend it with eachother. Figured I'd do something different by sending you this. Hehe, this took a little bit of time but it is coded! Have fun in Spain with your family! :3
         </p>
       </div>
     </div>
