full project base

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Happy Valentines Day!:</strong> This is the first Valetine we couldnt spend it with eachother. Figured I'd do something different by sending you this. Hehe, this took a little bit of time but it is coded! Have fun in Spain with your family! :3
+          <strong>Happy Valentines Day!:</strong> This is the first Valentine we couldn't spend with each other. I figured I'd do something different by sending you this. This took a little bit of time, and it was coded with the help of online tutorial! Anyways, have fun in Spain with your family! :3
         </p>
       </div>
     </div>
